--- a/themes/wwcomps/assets/css/_current-competition-entry.css
+++ b/themes/wwcomps/assets/css/_current-competition-entry.css
@@ -1,3 +1,9 @@
+.current-competition-entry-sec-ctlr{
+	padding-bottom: 40px;
+	background: #175783;
+}
+
+
 .current-competition-entry-sec-ctlr .hh-accordion-tab-row:first-child .hh-accordion-des{
 	display:block;
 }
@@ -161,6 +167,9 @@
     line-height: 1;
     min-width: 40px;
 }
+.summary.entry-summary.custom-summary ul.lottery-pn-answers li.selected{
+	color: #fff;
+}
 .summary.entry-summary.custom-summary .fl-product-summary-txt ul{
 	display: block!important;
 	padding-left: 15px;
@@ -171,8 +180,8 @@
 .woocommerce div.product .product_title{
 	color: #1C75BC;
 	font-size: 44px;
-	line-height: 1.2
-	margin-bottom: 24px;
+	line-height: 1.2;
+	margin-bottom: 20px;
 	font-family: 'LeagueSpartan-Bold';
 }
 .woocommerce div.product div.summary > p{
@@ -191,7 +200,7 @@
 	display: block;
 	color: #3A3A3A;
 	font-weight: 600;
-	margin-bottom: 30px;
+	margin-bottom: 27px;
 }
 .main-lottery.lottery-time-countdown{
 	display: flex;
@@ -208,6 +217,7 @@
 }
 .fl-pro-summary-prices del{
 	margin-bottom: auto;
+	color: #a6a6a6;
 }
 .fl-pro-summary-prices div label{
 	font-size: 28px;
@@ -270,6 +280,7 @@
 	font-weight: normal;
 	letter-spacing: 1px;
 	font-family: 'LeagueSpartan-Semibold';
+	margin-left: 12px;
 }
 .pro-single-btm > .quantity{
 	margin-left: auto!important;
@@ -433,18 +444,23 @@ body.single-product .products-grd-page-con{
 	top: 0;
 	right: 0;
 }
+.qty-icon{
+	display: flex;
+	align-items: center;
+}
 .pro-single-btm .btn-qty,
 .pro-single-btm .single_add_to_cart_button.button.alt.lottery-must-answer{
 	height: 56px!important;
 }
-.pro-single-btm .btn-qty{
+.pro-single-btm .qty-icon .qty{
 	width: 65px;
 	display: flex;
 	align-items: center;
 	position: relative;
+	height: 100%;
 }
-.pro-single-btm .btn-qty .minus,
-.pro-single-btm .btn-qty .plus{
+.pro-single-btm .qty-icon .minus,
+.pro-single-btm .qty-icon .plus{
 	position: absolute;
 	background: transparent;
 	width: 8px;
@@ -452,18 +468,19 @@ body.single-product .products-grd-page-con{
 	right: 15px;
 	padding: 0!important;
 	cursor: pointer;
+	z-index: 10;
 }
-.pro-single-btm .btn-qty .minus img,
-.pro-single-btm .btn-qty .plus img{
+.pro-single-btm .qty-icon .minus img,
+.pro-single-btm .qty-icon .plus img{
 	width: 100%;
 	height: 100%;
 	display: block;
 }
-.pro-single-btm .btn-qty .plus{
+.pro-single-btm .qty-icon .plus{
 	bottom: 20px;
 
 }
-.pro-single-btm .btn-qty .minus{
+.pro-single-btm .qty-icon .minus{
 	top: 20px;
 }
 .woocommerce div.product form.cart .pro-single-btm  div.quantity{
@@ -473,9 +490,19 @@ body.single-product .products-grd-page-con{
 .woocommerce .pro-single-btm .quantity input[type=number]{
 	width: 100%;
 	height: 100%;
+	color: #231F20;
+	font-weight: 600;
+	border: 1px solid #7C7C7C;
 }
 
-
+.icon-btn{
+	width: 60px;
+	height: 100%;
+	background-color: #1C75BC;
+	background-image: url(../images/clip-icon.png);
+	background-repeat: no-repeat;
+	background-position: center center;
+}
 @media(max-width:1199px){
 	.current-competition-entry-sec-ctlr .hh-accordion-des-cntlr p{
 		font-size:17px;
@@ -486,6 +513,26 @@ body.single-product .products-grd-page-con{
 	.current-competition-entry-sec-ctlr .hh-accordion-des-cntlr h5{
 		font-size:22px;
 	}
+
+	.woocommerce div.product div.summary > p {
+	    font-size: 20px;
+	}
+	.woocommerce div.product .product_title{
+		font-size: 40px;
+	}
+	.wc_lotery_countdown-amount {
+    	font-size: 39px!important;
+	}
+	.fl-pro-summary-prices div label{
+		font-size: 25px;
+	}
+	.ticket-count-crtl > div{
+		font-size: 17px;
+	}
+	.lottery-question, .fl-product-summary-txt h4{
+		font-size: 20px;
+	}
+
 }
 
 @media(max-width:991px){
@@ -494,6 +541,62 @@ body.single-product .products-grd-page-con{
 		padding-bottom:53px;
 		padding-right: 40px;
 	}
+	.gallery-crtl{
+		max-width: 550px;
+		width: 100%;
+		float: none;
+		margin-left: auto;
+		margin-right: auto;
+		margin-bottom: 30px;
+	}
+	.woocommerce div.product div.summary{
+		width: 100%;
+
+	}
+	.woocommerce div.product div.summary:before {
+	    content: "";
+	    border-top: none;
+	    border: none!important;
+	    border-left: 35px solid transparent!important;
+	    border-right: 35px solid transparent!important;
+	    border-bottom: 14px solid #fff!important;
+	    position: absolute;
+	    right: auto;
+	    top: initial;
+	    bottom: 100%;
+	    left: 50%;
+	    transform: translateX(-50%);
+	    -ms-transform: translateX(-50%);
+	    -webkit-transform: translateX(-50%);
+	}
+	.gallery-crtl{
+		padding-right: 0;
+	}
+	.woocommerce div.product div.summary > p{
+		font-size: 19px;
+	}
+	body.single-product .products-grd-page-con {
+	    padding-top: 37px;
+	    padding-bottom: 0;
+	}
+	.woocommerce div.product div.summary > p,
+	.woocommerce div.product .product_title,
+	.competition-ends-title,
+	.lottery-question, .fl-product-summary-txt h4{
+		text-align: center;
+	}
+	.fl-pro-summary-prices{
+		display: flex;
+		justify-content: center;
+	}
+	.summary.entry-summary.custom-summary ul.lottery-pn-answers,
+	.pro-single-btm{
+		justify-content: center;
+	}
+	.fl-pro-summary-prices ins .woocommerce-Price-amount.amount bdi{
+		font-size: 40px;
+	}
+
 }
 
 @media(max-width:767px){
@@ -526,6 +629,30 @@ body.single-product .products-grd-page-con{
 	.current-competition-entry-sec-ctlr .hh-accordion-title{
 		padding-bottom:0!important;
 	}
+	.woocommerce div.product .product_title {
+	    font-size: 30px;
+	}
+	.wc_lotery_countdown-amount {
+	    font-size: 29px!important;
+	}
+	.woocommerce div.product div.summary > p {
+	    font-size: 18px;
+	}
+	.fl-pro-summary-prices div label {
+	    font-size: 21px;
+	}
+	.fl-pro-summary-prices ins .woocommerce-Price-amount.amount bdi{
+		font-size: 35px;
+	}
+	.wc_lotery_countdown-period{
+		font-size: 15px;
+	}
+	.thumbnail-crtl .slick-prev, .thumbnail-crtl .slick-next{
+		margin-top: -3px;
+	}
+	.wc_lotery_countdown-section:not(:last-child):after{
+		font-size: 31px;
+	}
 }
 
 @media(max-width:575px){
@@ -541,6 +668,85 @@ body.single-product .products-grd-page-con{
 	.current-competition-entry-sec-ctlr .hh-accordion-des-cntlr{
 		padding-right:30px;
 	}
+	.summary.entry-summary.custom-summary .cart.pick-number, .summary.entry-summary.custom-summary {
+	    padding-left: 15px;
+	    padding-right: 15px;
+	}
+	.summary.entry-summary.custom-summary .cart.pick-number {
+	    margin-left: -15px;
+	    margin-right: -15px;
+	}
+	.summary.entry-summary.custom-summary .fl-product-summary-txt ul{
+		padding-left: 0;
+	}
+	.thumbnail-crtl .slick-prev, .thumbnail-crtl .slick-next {
+	    width: 24px;
+	    height: 24px;
+	    background-size: 100% 100%!important;
+	}
+	.thumbnail-crtl {
+	    padding-left: 35px;
+	    padding-right: 35px;
+	}
+	.woocommerce div.product .product_title {
+	    font-size: 24px;
+	}
+	.woocommerce div.product div.summary > p {
+	    font-size: 14px;
+	}
+	.competition-ends-title{
+		margin-bottom: 11px;
+		font-size: 14px;
+	}
+	.wc_lotery_countdown-section:not(:last-child):after{
+		font-size: 34px;
+	}
+	.fl-pro-summary-prices ins .woocommerce-Price-amount.amount bdi {
+	    font-size: 32px;
+	}
+	.lottery-question, .fl-product-summary-txt h4 {
+	    font-size: 16px;
+	}
+	.summary.entry-summary.custom-summary .fl-product-summary-txt ul li {
+	    font-size: 12px;
+	    padding-left: 15px;
+	    padding-bottom: 12px;
+	}
+	.pro-single-btm .btn-qty, .pro-single-btm .single_add_to_cart_button.button.alt.lottery-must-answer {
+	    height: 40px!important;
+	}
+	.pro-single-btm .qty-icon .plus {
+	    bottom: 13px;
+	}
+	.pro-single-btm .qty-icon .minus {
+	    top: 13px;
+	}
+	.lottery-question{
+		font-size: 14px;
+	}
+	.cart.pick-number .pro-single-btm button.single_add_to_cart_button.button{
+		font-size: 12px;
+		max-width: 150px;
+		padding-top: 9px!important;
+	}
+	.woocommerce .quantity input[type=number]{
+		font-size: 16px;
+	}
+	.current-competition-entry-sec-ctlr .fl-angle-sec-hdr > span{
+		width: 65px;
+	}
+	.fl-pro-summary-prices div label{
+		font-size: 14px;
+	}
+	.fl-pro-summary-prices del{
+		font-size: 14px;
+	}
+	.ticket-count-crtl > div {
+	    font-size: 13px;
+	}
+	.latest-compitions-page-con-cntlr {
+	    padding-bottom: 97px;
+	}
 }
 
 @media(max-width:479px){
@@ -550,6 +756,12 @@ body.single-product .products-grd-page-con{
 	.hh-accordion-des-cntlr ul li:after{
 		width:4px;
 		height: 4px;
+	}
+	.cart.pick-number .pro-single-btm button.single_add_to_cart_button.button{
+		margin-left: 5px;
+	}
+	.ticket-count-crtl > div {
+	    font-size: 12px;
 	}
 }
 
