--- a/themes/wwcomps/assets/css/main.css
+++ b/themes/wwcomps/assets/css/main.css
@@ -21,4 +21,5 @@
 @import url('_ended-competitions.css');
 @import url('_wc_common.css');
 @import url('_woocommerce.css');
+@import url('_cart.css');
 
