--- a/themes/wwcomps/assets/css/_woocommerce.css
+++ b/themes/wwcomps/assets/css/_woocommerce.css
@@ -436,6 +436,7 @@ h3#order_review_heading{
 }
 .woocommerce form.woocommerce-cart-form{
 	position: relative;
+	margin-top: -2px;
 }
 .woocommerce form.woocommerce-cart-form:before,
 .wc-carttotal-crtl .cart-collaterals .cart_totals table.shop_table:before,
@@ -818,6 +819,15 @@ tr.order-total td strong{
 .variation dd{
 	margin-bottom: 13px!important;
 }
+body.woocommerce-cart tr.order-total td strong{
+	color: #212529!important;
+}
+
+body.woocommerce-cart .cart-subtotal td,
+body.woocommerce-cart .order-total td{
+	text-align: right!important;
+	padding-right: 20px!important;
+}
 
 @media(max-width: 1499px){
 	.variation-Question{
@@ -839,6 +849,18 @@ tr.order-total td strong{
 	}
 }
 
+
+@media(max-width: 1199px){
+	.product-name > a{
+		font-size: 24px;
+	}
+	body.woocommerce-cart .entry-list-bg{
+		padding-top: 45px;
+		padding-bottom: 40px;
+	}
+
+}
+
 @media(max-width: 991px){
 	.woocommerce #customer_details .col-1,
 	.woocommerce #customer_details .col-2 {
@@ -852,6 +874,23 @@ tr.order-total td strong{
 	.woocommerce form .form-row label {
         font-size: 16px;
     }
+    body.woocommerce-cart .wc-cart-crtl,
+    body.woocommerce-cart .wc-carttotal-crtl{
+    	width: 100%;
+    	padding-left: 0!important;
+    	padding-right: 0!important;
+    }
+    body.woocommerce-cart .wc-cart-crtl{
+    	margin-bottom: 30px;
+    }
+    .cart-total-wrap-crtl{
+    	flex-wrap: wrap;
+    }
+     body.woocommerce-cart .cart-collaterals .order-total th,
+     body.woocommerce-cart .cart-collaterals .order-total td{
+     	background: #F7F4F2;
+     	border-top: 1px solid #707070!important;
+     }
 }
 @media(max-width: 768px){
 	body.woocommerce-cart .default-page-con,
@@ -872,6 +911,91 @@ tr.order-total td strong{
 	.woocommerce-cart.woocommerce-page button.button{
 	    margin-left: 0!important;
 	}
+	.woocommerce .cart_totals > h2,
+	.wc-cart-crtl > h2{
+		text-align: center;
+	}
+	.woocommerce table.shop_table td.product-thumbnail{
+		width: 100%;
+		display: block;
+		padding-left: 20px;
+		padding-right: 20px;
+		padding-top: 60px!important;
+	}
+	.woocommerce table.shop_table td.product-thumbnail:before,
+	.woocommerce .woocommerce-cart-form table.shop_table td.product-name:before,
+	.woocommerce .woocommerce-cart-form table.shop_table td.product-quantity:before,
+	.woocommerce .woocommerce-cart-form table.shop_table td.product-subtotal:before{
+		content: none;
+	}
+	.woocommerce table.shop_table td.product-thumbnail > a{
+		max-width: 400px;
+		width: 100%;
+		margin-left: auto;
+		margin-right: auto;
+	}
+	.woocommerce form.woocommerce-cart-form:before{
+		border-bottom: 16px solid #fff;
+	}
+	.woocommerce a.remove {
+	    font-size: 37px;
+	    height: 30px;
+	    width: 30px;
+	    font-weight: 500;
+	}
+	.woocommerce .woocommerce-cart-form table.shop_table td.product-name {
+	    width: 100%;
+	    border-top: none!important;
+	    padding-top: 10px!important;
+	}
+	.product-name > a{
+		text-align: center;
+		padding-bottom: 0!important;
+		margin-bottom: 25px!important;
+	}
+	.woocommerce table.shop_table_responsive tr td, 
+	.woocommerce-page table.shop_table_responsive tr td {
+	    display: block;
+	    text-align: center!important;
+	}
+	body.woocommerce-cart .woocommerce .quantity input[type=number]{
+		background: transparent!important;
+	}
+	.woocommerce .woocommerce-cart-form table.shop_table td.product-quantity,
+	.woocommerce .woocommerce-cart-form table.shop_table td.product-subtotal{
+		padding-top: 10px!important;
+		padding-bottom: 10px!important;
+		border-top: 1px solid #707070!important;
+	}
+	.woocommerce td.product-name dl.variation dd.variation-Answer{
+		display: flex;
+	}
+	.woocommerce td.product-name dl.variation{
+		display: table!important;
+		margin-left: auto;
+		margin-right: auto;
+	}
+	body.woocommerce-cart #update_cart{
+		margin-left: auto!important;
+		margin-right: auto!important;
+	}
+	.woocommerce .woocommerce-cart-form table.shop_table td.actions {
+		padding: 15px 10px 16px 10px!important;
+	}
+	body.woocommerce-cart .woocommerce .woocommerce-cart-form table.shop_table td.product-subtotal{
+		font-size: 16px;
+	}
+	.variation-Question {
+	    font-size: 13px;
+	}
+	.woocommerce .woocommerce-cart-form table.shop_table td.product-name{
+		padding-left: 20px;
+		padding-right: 20px;
+	}
+	body.woocommerce-cart .woocommerce table.shop_table .cart-subtotal td,
+	body.woocommerce-cart .woocommerce table.shop_table .order-total td{
+	 	text-align: right!important;
+	 }
 }
 
 
