--- a/themes/wwcomps/assets/css/_home.css
+++ b/themes/wwcomps/assets/css/_home.css
@@ -1,231 +1,104 @@
-.fl-angle-hdr{
-	background: #EACEAD;
-	border-top: 1px solid #fff;
-	border-bottom: 1px solid #fff;
-	position: relative;
+.winners-sec-bg{
+	padding-top: 60px;
+	padding-bottom: 120px;
 }
-.flash-title{
-	color: #fff;
-	margin: 0;
-	padding-top: 14px;
-	padding-bottom: 14px;
-	text-transform: uppercase;
-	display: inline-block;
-	background: #1C75BC;
-	padding-right: 70px;
-	position: relative;
-	letter-spacing: 1px;
+.winr-grid-cntrl{
+	padding-bottom: 60px;
 }
-.flash-title span{
-	font-family: 'LeagueSpartan-Regular';
+.winr-grid-cntrl ul li{
+	width: 25%!important;
 }
-.flash-title:after{
-	content: "";
-	position: absolute;
-	left: 100%;
-	top: 0;
-	bottom: 0;
-	width: 18px;
-	z-index: 2;
-	background: url(../images/blue-angle.png);
-	background-repeat: no-repeat;
-	background-size: 100% 100%;
-	margin-left: -6px;
+.winr-fea-img-cntlr{
+	height: 250px!important;
 }
-.fl-angle-hdr-join{
-	position: absolute;
-	top: 0;
-	bottom: 0;
-	left: 0;
-	background: #1C75BC;
+.winr-grd-item-des{
+	padding: 27px 20px 25px 15px!important;
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-end;
+	background-image: url('../images/winr-itm-des-bg.png')!important;
+	background-repeat: no-repeat!important;
+	background-position: right bottom!important;
+	background-position: right -9px bottom!important;
+}
+.wgid-title{
+	margin-bottom: 13px!important;
+}	
+.wgid-title a{
+	color: #35AA5F;
+	line-height: 1.3;
+}
+.winr-grd-date span{
+	font-size: 16px;
 }
 
-
-.lates-winners-sec-con,
-.lates-compititions-sec-con{
-	padding: 70px 0 30px;
+/* modal */
+.modal {
+    padding: 0;
 }
-.lwsc-btn{
-	padding-top: 50px;
-}
-
-.lwsc-btn a{
-	margin-left: auto;
-	margin-right: auto;
-	max-width: 280px;
-	width: 100%;
-}
-
-.filter-tabbar ul{
-	display: table;
-	margin-left: auto;
-	margin-right: auto;
-	position: relative;
-}
-
-
-.filter-tabbar ul li{
-	padding: 0 30px;
-	display: inline-block;
-	vertical-align: baseline;
-	position: relative;
-	background: #fff;
-}
-
-.filter-tabbar ul li a{
-	display: block;
-	padding: 10px 10px;
-	color: #3A3A3A;
-	text-transform: uppercase;
+.wgid-title-popup{
+	font-size: 22px;
 	font-family: 'LeagueSpartan-Semibold';
-	font-size: 18px;
-	line-height: 1;
-}
-.filter-tabbar ul li a:hover{
 	color: #35AA5F;
 }
-.filter-tabbar ul li:not(:last-child):after{
-	content: "";
-	position: absolute;
-	top: 0;
-	bottom: 0;
-	left: 100%;
-	width: 15px;
-	background: url(../images/right-arrow-border.png);
-	background-size: 100% 100%;
-	background-repeat: no-repeat;
-	z-index: 5;
+.modal-header{
+	display: flex;
+	align-items: center;
+	border: initial;
+	padding: 29px 15px;
 }
-.filter-tabbar ul li:last-child:after{
-	content: "";
-	position: absolute;
-	top: 0;
-	bottom: 0;
-	left: 100%;
-	border-top: 18px solid transparent;
-	border-bottom: 18px solid transparent;
-	border-left: 12px solid #fff;
+.modal-header img {
+    padding-top: 14px;
 }
-.filter-tabbar ul li.active{
-	background: #35AA5F;
-}
-.filter-tabbar ul li.active:after{
-	content: "";
-	position: absolute;
-	top: 0;
-	bottom: 0;
-	left: 100%;
-	width: 12px;
-	background: url(../images/right-arrow-border-green.png);
-	background-size: 100% 100%;
-	background-repeat: no-repeat;
-	z-index: 2;
-}
-.filter-tabbar ul li.active:before{
-	content: ""!important;
-    position: absolute!important;
-    top: 0!important;
-    bottom: 0!important;
-    left: 0!important;
-    right: auto!important;
-    border-top: 19px solid transparent!important;
-    border-bottom: 20px solid transparent!important;
-    border-left: 12px solid #fff!important;
-    z-index: 10;
-}
-.filter-tabbar ul li:first-child.active:before{
-	content: none!important;
-}
-.filter-tabbar ul li:last-child.active:after{
-	content: none;
-}
-.filter-tabbar ul li:last-child.active:after{
-	content: ""!important;
-	position: absolute!important;
-	top: 0!important;
-	bottom: 0!important;
-	left: 100%!important;
-	width: 12px;
-	background: url(../images/right-arrow-border-green.png)!important;
-	background-size: 100% 100%!important;
-	background-repeat: no-repeat!important;
-	z-index: 2!important;
-	border: none!important;
-}
-.filter-tabbar ul li.active a{
-	color: #fff;
-}
+.modal-body{
+	padding: 0;
 
-.filter-tabbar{
-	margin-bottom: 65px;
 }
-
-
-
-.winners-grd-item-fea-img-cntlr{
-	height: 274px;
-	overflow: hidden;
-	position: relative;
+.modal-body i{
+	display: inline-block;
+	vertical-align: baseline;
+	width: 100%;	
 }
-
-.winners-grd-item-fea-img-cntlr .inline-bg{
+.modal-body i img{
 	width: 100%;
-	height: 100%;
 }
-
-.winners-grd-item-des{
-	background: #fff;
-	padding: 30px 15px 25px;
+.body-cont{
+	padding: 45px 5px 55px 20px;
+	background-image: url('../images/pop-bg.png');
+	background-repeat: no-repeat;
+	background-repeat: no-repeat;
+    background-position: right bottom;
 }
-
-.winners-grd-item-des .hwgid-title{
-	text-transform: uppercase;
+.body-cont p{
 	font-size: 16px;
-	margin-bottom: 7px;
+	margin-bottom: 0;
+	line-height: 30px;
 }
-.winners-grd-item-des .hwgid-title a{
-	color: #3A3A3A;
+.body-cont p span{
+	font-weight: 500;
 }
-.winners-grd-item-des .hwgid-title a:hover{
-	color: #1378d4;
+.body-cont p strong{
+	color: #35AA5F;
+	padding-left: 5px;
 }
-
-.winners-grd-item-des strong{
-	display: block;
-	color: #7F7F7F;
-	font-size: 14px;
-	line-height: 1;
-	margin: 0;
-	font-family: 'Hind', sans-serif;
-	font-weight: 400;
+.modal-footer{
+	border: 1px solid #7c7c7c;
+	background: #F7F4F2;
+	padding: 16px;
 }
-
-.winnersSlider,
-.latesCompititionsSlider{
-	margin-bottom: 0!important;
-	margin-left: -50px;
-	margin-right: -50px;
-	padding-left: 40px;
-	padding-right: 40px;
+.pop-btn.btn{
+	border-radius: initial;
+	width: 100px;
+	height: 40px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	text-transform: uppercase;
+	padding-top: 10px;
 }
-
-.winnersSlideItem,
-.latesCompititionsSlideItem{
-	padding: 0 10px 60px;
-}
-
-
-.winnersSlider .slick-prev,
-.winnersSlider .slick-next{
-	margin-top: -70px;
-}
-
-.lates-compititions-section{
-	margin-bottom: 75px;
-}
-
-
-
+/* ================= */
+/* == responsive == */
+/* =============== */
 
 @media (max-width: 1699px){
 	
@@ -233,156 +106,158 @@
 
 
 @media (max-width: 1499px) {
-
+	.winr-grid-cntrl ul li{
+		padding: 0 9px 20px!important;
+	}
+	.wgid-title a{
+		font-size: 18px;
+	}
 }
 
 
 @media(max-width: 1399px){
-
+	.winr-grid-cntrl ul li{
+		width: 33.3333%!important;
+	}
 
 }
 
 @media(max-width: 1299px){
-
+	
 }
 
 @media(max-width: 1199px){
 
-	.winnersSlider, .latesCompititionsSlider{
-		padding-left: 0;
-		padding-right: 0;
-		margin-left: -10px;
-		margin-right: -10px;
-	}
-	.lates-winners-sec-con,
-	.lates-compititions-sec-con{
-		overflow: hidden;
-	}
 
 }
 
 @media(max-width: 991px){
-	.winners-grd-item-fea-img-cntlr{
-		height: 222px;
+	.winr-fea-img-cntlr {
+    	height: 225px!important;
 	}
-	.pro-fea-img-cntlr {
-	    height: 222px;
+	.winr-grid-cntrl ul{
+		margin: 0 -5px -20px!important;
 	}
+	.winr-grid-cntrl ul li{
+		padding: 0 5px 10px!important;
+	}
+	.wgid-title a{
+		font-size: 17px;
+	}
+	.winr-grd-item-des{
+		padding: 27px 10px 25px 10px!important;
+	}
+	.wgid-title-popup{
+		font-size: 20px;
+	}
+	.modal-title{
+		line-height: 1.4;
+	}
+}
 
+@media(max-width: 840px){
+	.winr-fea-img-cntlr {
+    	height: 200px!important;
+	}
 }
 
 @media(max-width: 767px){
-	.winnersSlideItem, .latesCompititionsSlideItem {
-	    padding: 0 10px 45px;
+	.winr-fea-img-cntlr {
+    	height: 250px!important;
 	}
-	.lwsc-btn {
-	    padding-top: 35px;
+	.winr-grid-cntrl ul li{
+		width: 50%!important
 	}
-	.filter-tabbar ul li{
-		padding-left: 20px;
-		padding-right: 20px;
+	.winr-grd-date span{
+		font-size: 15px;
 	}
-	.filter-tabbar ul li a{
-		font-size: 16px;
+	.body-cont{
+		text-align: center;
+		padding: 32px 5px 55px 20px;
 	}
-	.filter-tabbar {
-	    margin-bottom: 50px;
+	.body-cont p{
+		font-size: 14px;
+		line-height: 1.8;
+	}
+	.wgid-title-popup{
+		font-size: 18px;
+	}
+	.modal-title{
+		line-height: 1.3;
+	}
+}
+
+@media(max-width: 639px){
+	.winr-fea-img-cntlr {
+    	height: 210px!important;
+	}
+	.body-cont p{
+		font-size: 14px;
+		line-height: 1.7;
 	}
 }
 
 @media(max-width: 575px){
-	.winnersSlider .winners-grd-item,
-	.latesCompititionsSlider .product-grd-item{
-		max-width: 350px;
-		margin-left: auto;
-		margin-right: auto;
+	.winners-sec-bg{
+		padding-top: 40px;
+		padding-bottom: 100px;
 	}
-	.lwsc-btn a{
-		font-size: 12px;
-		max-width: 220px;
+	.winr-tabbar{
+		margin-bottom: 50px;
 	}
-	.lwsc-btn {
-	    padding-top: 28px;
+	.winr-grid-cntrl{
+		padding-bottom: 60px;
 	}
-	.filter-tabbar ul{
-		width: 100%;
-		padding-right: 20px;
-		background: transparent;
-		display: flex;
-		flex-wrap: wrap;
+	.winr-grid-cntrl ul li{
+		width: 100%!important;
+		padding-bottom: 25px!important;
 	}
-	.filter-tabbar ul li{
-		width: 25%;
-		margin-bottom: 10px;
+	.winr-grid-item {
+    	max-width: 300px!important;
+    	width: 100%!important;
+    	margin: auto;
 	}
-	.filter-tabbar ul li:nth-child(4):after {
-	    content: "";
-	    position: absolute;
-	    top: 0;
-	    bottom: 0;
-	    left: 100%;
-	    border-top: 17px solid transparent;
-	    border-bottom: 17px solid transparent;
-	    border-left: 10px solid #fff;
-
+	.winr-fea-img-cntlr {
+    	height: 217px!important;
 	}
-	.filter-tabbar ul li:last-child:after{
-		border-top: 17px solid transparent;
-	    border-bottom: 17px solid transparent;
-	    border-left: 10px solid #fff;
+	.winr-grd-date span{
+		font-size: 14px;
 	}
-	.filter-tabbar ul li a {
-	    font-size: 14px;
+	.modal.show .modal-dialog{
+		padding: 10px 10px;
 	}
-	.lates-winners-sec-con, .lates-compititions-sec-con {
-	    padding: 60px 0 30px;
+	.wgid-title-popup{
+		font-size: 17px;
 	}
-	.filter-tabbar {
-	    margin-bottom: 40px;
+	.modal-title{
+		line-height: 1.2;
 	}
 }
 
 @media(max-width: 479px){
-	.filter-tabbar ul li{
-		width: 33.3333%;
+	.body-cont p{
+		font-size: 12px;
+		line-height: 2;
 	}
-	.filter-tabbar ul li a {
-	    font-size: 12px;
+	.wgid-title-popup{
+		font-size: 16px;
 	}
-	.filter-tabbar ul li:nth-child(3):after {
-	    content: "";
-	    position: absolute;
-	    top: 0;
-	    bottom: 0;
-	    left: 100%;
-	    border-top: 16px solid transparent;
-	    border-bottom: 16px solid transparent;
-	    border-left: 12px solid #fff;
-
+	.modal-title{
+		line-height: 1.1;
 	}
-	.filter-tabbar ul li:last-child:after{
-		border-top: 16px solid transparent;
-	    border-bottom: 16px solid transparent;
-	    border-left: 12px solid #fff;
+	.winr-grd-item-des{
+		padding: 24px 15px 24px 15px!important;
+		text-align: center;
 	}
-	.filter-tabbar ul li:nth-child(4):after{
-		content: "";
-		position: absolute;
-		top: 0;
-		bottom: 0;
-		left: 100%;
-		width: 15px;
-		background: url(../images/right-arrow-border.png);
-		background-size: 100% 100%;
-		background-repeat: no-repeat;
-		z-index: 5;
-		border: none;
+	.body-cont{
+		padding: 35px 5px 55px 10px;
+		text-align: center;
 	}
-
+	.wgid-title{
+		margin-bottom: 13px!important;
+	}
 }
 
 @media(max-width: 359px){
 
 }
-
-
